fix: remove home page horizontal page overflow

--- a/src/App.scoped.css
+++ b/src/App.scoped.css
@@ -5,7 +5,8 @@
 
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   display: none;
